src/test/resources/examples/invalid_cases/StaticImportStar.queen
package com.example;

import com.example.api.Import;
import com.other.import.List;
import static com.example.Test.*;

public final implementation StaticImportStar of Import {

}